fix: Corrigir Start Command para usar app.py com PostgreSQL
- Atualizar render.yaml para executar python app.py
- Remover variáveis de ambiente desnecessárias
- Garantir que PostgreSQL seja usado em vez do proxy

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,10 +3,8 @@ services:
     name: 3dbenchy-bros-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python proxy_server.py
+    startCommand: python app.py
     envVars:
       - key: FLASK_ENV
         value: production
-      - key: BACKEND_URL
-        value: https://0vhlizcklvgn.manus.space/api
 
