--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,13 +2,16 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
 
+# Base de dados
+psycopg2-binary==2.9.7
+
 # Autenticação e segurança
 PyJWT==2.8.0
 
 # Configuração
 python-dotenv==1.0.0
 
-# HTTP requests (para OAuth)
+# HTTP requests
 requests==2.31.0
 
 # WSGI server para produção
@@ -17,7 +20,7 @@ gunicorn==21.2.0
 # Utilitários
 Werkzeug==2.3.7
 
-# Dependências de teste
+# Dependências de teste (opcional em produção)
 pytest==7.4.3
 pytest-flask==1.3.0
 pytest-cov==4.1.0
