--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 # Framework web
 Flask==2.3.3
 Flask-CORS==4.0.0
+Flask-JWT-Extended==4.5.2
 
 # Base de dados
 psycopg2-binary==2.9.7
@@ -21,6 +22,7 @@ gunicorn==21.2.0
 Werkzeug==2.3.7
 
 psycopg2-binary==2.9.7
+gunicorn==21.2.0
 
 # Dependências de teste (opcional em produção)
 pytest==7.4.3
@@ -28,4 +30,5 @@ pytest-flask==1.3.0
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 factory-boy==3.3.0
+
 
