--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,30 @@
 # Framework web
-Flask==2.3.3
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.5.2
+Flask==3.0.3
+Flask-CORS==4.0.1
+Flask-JWT-Extended==4.6.0
 
-# Base de dados
-psycopg2-binary==2.9.9
+# Base de dados - Usando psycopg3 para compatibilidade com Python 3.13
+psycopg[binary]==3.2.3
 
 # Autenticação e segurança
-PyJWT==2.8.0
+PyJWT==2.9.0
 
 # Configuração
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 
 # HTTP requests
-requests==2.31.0
+requests==2.32.3
 
 # WSGI server para produção
-gunicorn==21.2.0
+gunicorn==23.0.0
 
 # Utilitários
-Werkzeug==2.3.7
+Werkzeug==3.0.4
 
 # Dependências de teste (opcional em produção)
-pytest==7.4.3
+pytest==8.3.3
 pytest-flask==1.3.0
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-factory-boy==3.3.0
+pytest-cov==5.0.0
+pytest-mock==3.14.0
+factory-boy==3.3.1
 
