--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
 name: 3dbenchy-backend
 env: python
 buildCommand: "cd backend && pip install -r requirements.txt"
-startCommand: "cd backend && gunicorn --bind 0.0.0.0:$PORT app:app"
+startCommand: "cd backend && python -m gunicorn --bind 0.0.0.0:$PORT app:app"
 plan: free
 healthCheckPath: /
 envVars:
