--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
 - type: web
 name: 3dbenchy-backend
 env: python
-buildCommand: "cd backend && pip install -r requirements.txt"
-startCommand: "cd backend && python -m gunicorn --bind 0.0.0.0:$PORT app:app"
+buildCommand: "pip install -r backend/requirements.txt"
+startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
 plan: free
 healthCheckPath: /
 envVars:
