🚀 RESTRUCTURE: Mover todos arquivos para raiz - SOLUÇÃO DEFINITIVA
✅ MUDANÇAS CRÍTICAS:
- Mover backend/* para raiz do projeto
- Corrigir TODOS os imports (backend.* → utils.*, routes.*)
- Simplificar render.yaml para estrutura padrão
- Testar localmente: 15 rotas funcionando

✅ ARQUIVOS MOVIDOS:
- requirements.txt → raiz
- utils/ → raiz
- routes/ → raiz
- config.py → raiz
- __init__.py → raiz

✅ RENDER.YAML ATUALIZADO:
- buildCommand: pip install -r requirements.txt
- startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
- Estrutura padrão compatível com Render

🎯 RESULTADO: Estrutura 100% compatível com Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
 - type: web
   name: 3dbenchy-backend
   env: python
-  buildCommand: "pip install -r backend/requirements.txt"
-  startCommand: "python -m gunicorn --bind 0.0.0.0:$PORT --pythonpath . app:app"
+  buildCommand: "pip install -r requirements.txt"
+  startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
   plan: free
   healthCheckPath: /
   envVars:
